--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: JP Blog
-SEOTitle: Hjp的博客 | JP Blog
+SEOTitle: HJP的博客 | JP Blog
 header-img: img/home-bg.jpg
 email: hongjiapeng@hotmail.com
 description: "Every failure is leading towards success."
