--- a/_config.yml
+++ b/_config.yml
@@ -55,8 +55,8 @@ kramdown:
 
 
 # 评论系统
-# Disqus（https://  disqus.com/）
-# disqus_username: hongjiapeng
+# Disqus（https://disqus.com/）
+disqus_username: hongjiapeng
 
 # Gitalk
 gitalk:
