--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ sidebar-avatar: /img/avatar_m.jpg      # use absolute URL, seeing it's used in b
 # SNS settings
 RSS: false
 # weibo_username:     
-zhihu_username:     hongjiapeng.vip    
+# zhihu_username:     hongjiapeng.vip    
 github_username:    hongjiapeng
 facebook_username:  
 jianshu_username:   
@@ -56,7 +56,7 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-disqus_username: hongjiapeng
+# disqus_username: hongjiapeng
 
 # Gitalk
 gitalk:
