--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ disqus_username: hongjiapeng-github-io
 
 # Gitalk
 gitalk:
-  enable: false    #是否开启Gitalk评论
+  enable: true    #是否开启Gitalk评论
   clientID: 9214569958517b37cf25                            #生成的clientID
   clientSecret: b4efcbce2cb2b5b182ee03e865878c1e022c14f4    #生成的clientSecret
   repo: hongjiapeng.github.io    #仓库名称
